# FLBO

./: README.md  config.py  main.py  pyproject.toml  train.py
notebooks/: TP_FLBO.ipynb  heat_diffusion.ipynb  train.ipynb  utils.py
results/: training_history.json
src/datasets/: TOSCA.py  transforms.py
src/geometry/: FLBO.py  descriptors.py  finsler.py  frames.py
src/models/: ascnn.py  layers.py
src/utils/: eval.py  notebook.py  viz.py
