[project]
name = "flbo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "ipykernel>=7.2.0",
    "libigl>=2.6.2",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.3",
    "plotly>=6.6.0",
    "ruff>=0.15.7",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
]
